@@ -35,6 +35,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Launchpad History now shows a compact adapter tag (including plugin marker and denied-capability marker) from the latest run evidence.
 - Launchpad History now includes an inline details pane for the selected row, surfacing adapter class/id/mode/source/reasons and capability counts without opening the full report viewer.
 - Launchpad History now provides direct actions to open selected latest run folders and adapter evidence (`analysis`) folders.
+- Launchpad History now falls back to newest `run_*` folder detection when `view_state.json` latest pointers are missing/stale.
 - Windows shell report card outputs now surface adapter evidence directly:
   - `report_card.txt` includes additive `adapterMeta=` and `capabilities=` lines when adapter evidence exists.
   - `report_card_v0.json` includes additive `adapter` metadata/capability object for automation and UI parity.
